--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,27 @@ services:
       - "27017:27017"
 
   ###
+  # Consul
+  ###
+  consul:
+    image: consul:latest
+    container_name: edgex-consul
+    command: "agent -server -bootstrap-expect 1 -config-dir=/etc/consul -ui-dir /ui"
+    restart: always
+    mem_limit: 128m
+    ports:
+      - 8500
+    expose:
+      - 53
+      - 8300
+      - 8301
+      - 8302
+      - 8400
+      - 8500
+    dns:
+      - 127.0.0.1
+
+  ###
   # EdgeX Auth
   ###
   edgex-auth:
