--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,8 +34,8 @@
   version = "1.2.0"
 
 [[constraint]]
+  branch = "master"
   name = "github.com/satori/go.uuid"
-  version = "1.2.0"
 
 [[constraint]]
   name = "go.uber.org/zap"
