--- a/proxy/nginx/nginx.conf
+++ b/proxy/nginx/nginx.conf
@@ -54,8 +54,8 @@ http {
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
-  upstream docker-http {
-  	server mainflux-http:7070;
+  upstream edgex-service {
+  	server localhost:8181;
   }
 
 	##
@@ -120,14 +120,27 @@ http {
     add_header Access-Control-Allow-Headers "*";
 
     server_name localhost;
+
+		location = /users {
+			proxy_pass	http://edgex-auth:8089/users;
+		}
+
+		location = /login {
+			proxy_pass	http://edgex-auth:8089/login;
+		}
+
     # Proxy pass to auth service
     location /api/ {
-      proxy_redirect off;
+			# Auth Req Forwarding
+			auth_request     /auth;
+			auth_request_set $auth_status $upstream_status;
+
+			proxy_redirect off;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_pass http://docker-manager/;
+      proxy_pass http://edgex-service/;
 
       # Allow OPTIONS method CORS
       if ($request_method = OPTIONS ) {
@@ -135,20 +148,14 @@ http {
         add_header Content-Type text/plain;
         return 200;
       }
+		} # location /api
 
-      # Auth Req Forwarding
-      auth_request     /auth;
-      auth_request_set $auth_status $upstream_status;
-
-    } # location /api
+		location = /auth {
+			internal;
+			proxy_pass              http://edgex-auth:8089/auth;
+			proxy_pass_request_body off;
+			proxy_set_header        Content-Length "";
+			proxy_set_header        X-Original-URI $request_uri;
+		} # location /auth
   } # server https
-
-  location = /auth {
-    internal;
-    proxy_pass              http://auth-server;
-    proxy_pass_request_body off;
-    proxy_set_header        Content-Length "";
-    proxy_set_header        X-Original-URI $request_uri;
-  }
-
 } # http
